--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Web-9C2C2544-CD37-4001-B3AE-6C040B531923;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MarktContext": "Host=localhost;Database=MusicMarktDb;UserName=postgres;Password=123",
+    "MarktIdentity": "Host=localhost;Database=MusicMarktIdentityDb;UserName=postgres;Password=123"
   },
   "Logging": {
     "LogLevel": {
